# MyApplication

./: README.txt
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/myapplication/: MainActivity.java
app/src/main/jni/: com_example_myapplication_MainActivity.h  convert.c
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
